# src/main/java/de/peterspace/cardanotools/rest/WalletStatementRestInterface.java
@@ -12,9 +12,8 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
+import de.peterspace.cardanodbsyncapi.client.model.AccountStatementRow;
 import de.peterspace.cardanotools.dbsync.CardanoDbSyncClient;
-import de.peterspace.cardanotools.repository.AccountRepository;
-import de.peterspace.cardanotools.rest.dto.AccountStatementRow;
 import lombok.RequiredArgsConstructor;
 
 @RestController
@@ -22,7 +21,6 @@ import lombok.RequiredArgsConstructor;
 @RequestMapping("/api/statement")
 public class WalletStatementRestInterface {
 
-	private final AccountRepository accountRepository;
 	private final CardanoDbSyncClient cardanoDbSyncClient;
 
 	@GetMapping("{stakeAddress}")
@@ -31,7 +29,7 @@ public class WalletStatementRestInterface {
 		List<String> addressList = Arrays.asList(stakeAddresses.split("\\s+"));
 		return addressList
 				.parallelStream()
-				.flatMap(s -> cardanoDbSyncClient.accountStatement(s, currency).stream())
+				.flatMap(s -> cardanoDbSyncClient.getStatement(s).stream())
 				.sorted(Comparator.comparing(AccountStatementRow::getTimestamp))
 				.collect(Collectors.toList());
 
