# src/main/java/de/peterspace/cardanotools/rest/dto/AccountStatementRow.java
@@ -1,21 +1,0 @@
-package de.peterspace.cardanotools.rest.dto;
-
-import java.util.Date;
-
-import lombok.Value;
-
-@Value
-public class AccountStatementRow {
-	Date timestamp;
-	int epoch;
-	String txHash;
-	long withdrawn;
-	long rewards;
-	long out;
-	long in;
-	long change;
-	Double changeInFiat;
-	Double rate;
-	long sum;
-	String[] operations;
-}
